--- a/index.html
+++ b/index.html
@@ -1,9 +1,132 @@
 <!DOCTYPE html>
+<!--
+
+Oh hello there, ummm nothing to see here actually.
+
+ronnelsanchez.github.io © 2018
+Designer and Developer : Ronnel sanchez
+Framework : VueJS 2.X
+
+MMMMMMMMMMMMMMMN+`     :dMMMMMMMNmhy+:`
+MMMMMMMMMMMMMNo`     :dMMMMMNoMMMMMMMMMdo-
+MMMMMMMMMMMNo`     :dMMMMMNo` MMMMMMMMMMMMd/
+MMMMMMMMMNo`     :dMMMMMNo`   MMMMMMMMMMMMMMm:
+MMMMMMMNo`     :dMMMMMNo`     MMMMMMMMMMMMMMMMy`
+MMMMMNo`     :dMMMMMNo`       MMMMMMMMMMMMMMMMMd`
+MMMNo`     :dMMMMMNo`         MMMMMMMMMMMMMMMMMMh
+MNo`     :dMMMMMNo`     -     MMMMMMMMMMMMMMMMMMM/
+o`     :dMMMMMNo`     :dM     MMMMMMMMMMMMMMMMMMMd
+     :dMMMMMNo`     :dMMM     MMMMMMMMMMMMMMMMMMMM
+   :dMMMMMNo`     :dMMMMM     MMMMMMMMMMMMMMMMMMMM
+ :dMMMMMNo`     :dMMMMMMM     MMMMMMMMMMMMMMMMMMMd
+dMMMMMNo`     :dMMMMMMMMM     MMMMMMMMMMMMMMMMMMM/
+MMMMMo`     :dMMMMMNMMMMM     MMMMMMMMMMMMMMMMMMh
+MMMMM     :dMMMMMNo`MMMMM     MMMMMMMMMMMMMMMMMd`
+MMMMM   :dMMMMMNo`  MMMMM     MMMMMMMMMMMMMMMMy`
+MMMMM :dMMMMMNo`    MMMMM     MMMMMMMMMMMMMMm/
+MMMMMdMMMMMNo`     :MMMMM     MMMMMMMMMMMMd/
+MMMMMMMMMNo`     :dMMMMMN     MMMMMMMMMdo-
+MMMMMMMNo`     :dMMMMMNo`     MMMMMMMMd:
+MMMMMNo`     :dMMMMMNo`     -hMMMMMMMMMMh:
+MMMNo`     :dMMMMMNo`     -hMMMMMMMMMMMMMMh:
+MNo`     :dMMMMMNo`     :hMMMMMMMMMMMMMMMMMMh:
+o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
+     :dMMMMMN+`     :dMMMMMMMMMMMMMMMMMMMMMMMMMMh:
+
+-->
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Ronnel Sanchez</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <meta name="referrer" content="unsafe-url" />
+    <meta name="description" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer" />
+    <meta name="rights" content="RONNEL SANCHEZ © 2017. All rights reserved." />
+    <meta name="author" content="Ronnel Sanchez">
+    <meta name="application-name" content="Resume | Ronnel Sanchez"/>
+    <meta name="keywords" content="UI/UX Designer, Front-End Developer, UI, UX, Web Designer, Visual Designer" />
+
+    <meta property="fb:app_id" content="" />
+    <meta property="fb:pages" content="1083232565114576" />
+
+    <meta property="og:title" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ronnelsanchez.github.io/" />
+    <meta property="og:site_name" content="Ronnel Sanchez | Portfolio" />
+    <meta property="og:description" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer" />
+    <meta property="og:image" content="src/assets/img/card.jpg" />
+    <meta property="article:tag" content="UI/UX Designer, Front-End Developer, UI, UX, Web Designer, Visual Designer" />
+    <meta property="article:publisher" content="https://ronnelsanchez.github.io/" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Ronnel Sanchez | Portfolio" />
+    <meta property="twitter:description" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer" />
+    <meta property="twitter:image:src" content="https://ronnelsanchez.github.io/img/card.jpg" />
+    <meta name="twitter:site" content="@imronnel" />
+    <meta name="twitter:creator" content="@imronnel" />
+
+    <meta name="application-name" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer">
+    <meta name="msapplication-TileColor" content="#0097a7">
+    <meta name="msapplication-TileImage" content="src/assets/img/rs-144x144.png">
+    <meta name="msapplication-square70x70logo" content="src/assets/img/rs-70x70.png">
+    <meta name="msapplication-square150x150logo" content="src/assets/img/rs-150x150.png">
+    <meta name="msapplication-square310x310logo" content="src/assets/img/rs-310x310.png">
+    <meta name="theme-color" content="#0097a7">
+
+    <title>Ronnel Sanchez | UI/UX Designer and Front-End Developer</title>
+
+    <link rel="canonical" href="https://ronnelsanchez.github.io" />
+    <link rel="image_src" href="img/card.jpg" />
+    <link rel="publisher" href="https://plus.google.com/+RonnelSanchez" />
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="src/assets/img/rs-57x57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="src/assets/img/rs-144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="src/assets/img/rs-72x72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="src/assets/img/rs-60x60.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="src/assets/img/rs-120x120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="src/assets/img/rs-76x76.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="src/assets/img/rs-152x152.png">
+
+    <link rel="icon" type="image/png" href="src/assets/img/rs-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="src/assets/img/rs-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="src/assets/img/rs-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="src/assets/img/rs-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="src/assets/img/rs-128x128.png" sizes="128x128">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#0097a7">
+    <meta name="msapplication-TileColor" content="#0097a7" />
+    <meta name="msapplication-TileImage" content="src/assets/img/rs-16x16.png" />
+
+    <meta name="msapplication-navbutton-color" content="#0097a7">
+    <meta name="msapplication-task" content="name=Ronnel Sanchez | Portfolio;action-uri=https://ronnelsanchez.github.io" />
+
+    <link rel="manifest" href="src/manifest.json">
+
+    <script>
+    window.addEventListener('load', function() {
+
+      var outputElement = document.getElementById('output');
+
+      navigator.serviceWorker.register('service-worker.js', { scope: 'src/' })
+        .then(function(r) {
+          console.log('registered service worker');
+        })
+        .catch(function(whut) {
+          console.error('uh oh... ');
+          console.error(whut);
+        });
+
+      window.addEventListener('beforeinstallprompt', function(e) {
+        outputElement.textContent = 'beforeinstallprompt Event fired';
+      });
+    });
+    </script>
   </head>
   <body>
     <div id="app"></div>
