Update static path

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
     <meta property="og:url" content="https://ronnelsanchez.github.io/" />
     <meta property="og:site_name" content="Ronnel Sanchez | Portfolio" />
     <meta property="og:description" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer" />
-    <meta property="og:image" content="src/assets/img/card.jpg" />
+    <meta property="og:image" content="/static/img/card.jpg" />
     <meta property="article:tag" content="UI/UX Designer, Front-End Developer, UI, UX, Web Designer, Visual Designer" />
     <meta property="article:publisher" content="https://ronnelsanchez.github.io/" />
     <meta property="og:locale" content="en_US" />
@@ -69,10 +69,10 @@ o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
 
     <meta name="application-name" content="Ronnel Sanchez | UI/UX Designer and Front-End Developer">
     <meta name="msapplication-TileColor" content="#0097a7">
-    <meta name="msapplication-TileImage" content="src/assets/img/rs-144x144.png">
-    <meta name="msapplication-square70x70logo" content="src/assets/img/rs-70x70.png">
-    <meta name="msapplication-square150x150logo" content="src/assets/img/rs-150x150.png">
-    <meta name="msapplication-square310x310logo" content="src/assets/img/rs-310x310.png">
+    <meta name="msapplication-TileImage" content="/static/img/rs-144x144.png">
+    <meta name="msapplication-square70x70logo" content="/static/img/rs-70x70.png">
+    <meta name="msapplication-square150x150logo" content="/static/img/rs-150x150.png">
+    <meta name="msapplication-square310x310logo" content="/static/img/rs-310x310.png">
     <meta name="theme-color" content="#0097a7">
 
     <title>Ronnel Sanchez | UI/UX Designer and Front-End Developer</title>
@@ -81,19 +81,19 @@ o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
     <link rel="image_src" href="img/card.jpg" />
     <link rel="publisher" href="https://plus.google.com/+RonnelSanchez" />
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="src/assets/img/rs-57x57.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="src/assets/img/rs-144x144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="src/assets/img/rs-72x72.png">
-    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="src/assets/img/rs-60x60.png">
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="src/assets/img/rs-120x120.png">
-    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="src/assets/img/rs-76x76.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="src/assets/img/rs-152x152.png">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/static/img/rs-57x57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/img/rs-144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/img/rs-72x72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/static/img/rs-60x60.png">
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/static/img/rs-120x120.png">
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/static/img/rs-76x76.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/static/img/rs-152x152.png">
 
-    <link rel="icon" type="image/png" href="src/assets/img/rs-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="src/assets/img/rs-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="src/assets/img/rs-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="src/assets/img/rs-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="src/assets/img/rs-128x128.png" sizes="128x128">
+    <link rel="icon" type="image/png" href="/static/img/rs-196x196.png" sizes="196x196">
+    <link rel="icon" type="image/png" href="/static/img/rs-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/static/img/rs-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/static/img/rs-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/static/img/rs-128x128.png" sizes="128x128">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -101,19 +101,19 @@ o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#0097a7">
     <meta name="msapplication-TileColor" content="#0097a7" />
-    <meta name="msapplication-TileImage" content="src/assets/img/rs-16x16.png" />
+    <meta name="msapplication-TileImage" content="/static/img/rs-16x16.png" />
 
     <meta name="msapplication-navbutton-color" content="#0097a7">
     <meta name="msapplication-task" content="name=Ronnel Sanchez | Portfolio;action-uri=https://ronnelsanchez.github.io" />
 
-    <link rel="manifest" href="src/manifest.json">
+    <link rel="manifest" href="/static/manifest.json">
 
     <script>
     window.addEventListener('load', function() {
 
       var outputElement = document.getElementById('output');
 
-      navigator.serviceWorker.register('service-worker.js', { scope: 'src/' })
+      navigator.serviceWorker.register('service-worker.js', { scope: '/static/' })
         .then(function(r) {
           console.log('registered service worker');
         })
