--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ o`     :dMMMMMNo`     :dMMMMMMMMMMMMMMMMMMMMMMh:
 
       var outputElement = document.getElementById('output');
 
-      navigator.serviceWorker.register('service-worker.js', { scope: './static/' })
+      navigator.serviceWorker.register('service-worker.js', { scope: './' })
         .then(function(r) {
           console.log('registered service worker');
         })
